// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Node Labels
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Node Labels
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledLabel-sc-1wi30ud-1 jFWThF"
        data-testid="sidebarMetaItem"
      >
        *
      </div>
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledLabel-sc-1wi30ud-1 jFWThF"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledLabel-sc-1wi30ud-1 jFWThF"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Property Keys
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Property Keys
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledProperty-sc-1wi30ud-3 VQQyY"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledProperty-sc-1wi30ud-3 VQQyY"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Relationship Types
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="Drawer__DrawerSection-z49atx-4 soBJE"
  >
    <h5
      class="Drawer__DrawerSubHeader-z49atx-3 dDZtjD"
    >
      Relationship Types
    </h5>
    <div
      class="Drawer__DrawerSectionBody-z49atx-5 URTys"
    >
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledRelationship-sc-1wi30ud-2 kJUWKe"
        data-testid="sidebarMetaItem"
      >
        *
      </div>
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledRelationship-sc-1wi30ud-2 kJUWKe"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="styled__chip-sc-1wi30ud-0 styled__StyledRelationship-sc-1wi30ud-2 kJUWKe"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
